# GloveDataHub

./: LICENSE  README.md  TODO  glovedatahub.spec  prepare.bat  prepare.ps1  prepare.sh  project.txt  requirements.txt  setup.iss  version.txt
API/: duration_time.py  exe_manager.py  main.py  main_manager.py  manage_exe.py  manage_main.py  user_data.py
Data-Acquisition/: CMakeLists.txt  glove_data_acquisition.cpp  gloves_data_acquisition.cpp  prova.cpp
Data-Acquisition/docs/html/: classes.html  files.html  globals_func.html  index.html  struct_glove_data.html
Data-Acquisition/docs/html/search/: all_4.js  classes_0.js  files_0.js  searchdata.js  variables_0.js
Data-Acquisition/docs/latex/: annotated.tex  struct_glove_data.tex
Data-Acquisition/html/: annotated.html  classes.html  doxygen_crawl.html  functions.html  functions_vars.html  struct_glove_data-members.html  struct_glove_data.html
Data-Acquisition/html/search/: searchdata.js  variables_1.js
Data-Acquisition/latex/: refman.tex  struct_glove_data.tex
GUI/: calibration_screen.py  custom_button.py  data_acquisition_screen.py  data_entry_screen.py  data_handler_screen.py  final_screen.py  gui_main.py  message_manager.py  pompa.py  start_calibration_screen.py  test (funziona).py  test.py  test_2 (funziona).py  test_3 (funziona).py  welcome.py  welcome_screen.py  welcome_window.py  window_manager.py
GUI/Old-Version/: calibration_screen.py  data_acquisition_screen.py  data_entry_screen.py
docs/_build/html/: .buildinfo  api.html  genindex.html  gui.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  gui.doctree  index.doctree
docs/_build/html/_sources/: api.rst.txt
docs/docs/: modules.rst
docs/source/: API.rst  calibration_screen.rst  conf.py  custom_button.rst  data_acquisition_screen.rst  data_entry_screen.rst  final_screen.rst  gui_main.rst  index.rst  message_manager.rst  modules.rst  welcome_screen.rst  window_manager.rst
docs/source/_build/html/: .buildinfo  api.html  genindex.html  gui.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: api.doctree  environment.pickle  gui.doctree  index.doctree
docs/source/_build/html/_sources/: api.rst.txt
